Update : front-end
npm install & time Zone

--- a/angular-app/src/index.html
+++ b/angular-app/src/index.html
@@ -17,4 +17,10 @@
   <app-root></app-root>
 </body>
 
+
+<script>
+  "use strict";
+  let now = new Date();
+  alert( now ); // 현재 날짜 및 시간이 출력됨
+  </script>
 </html>
